{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 21,
  "lineage": "3e48389f-8fe3-80f0-bd02-033c8e6a60d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "two-tier-web-server-1-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "two-tier-web-server-2-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "two-tier-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339712706563:internet-gateway/igw-0ea06c0adb38f2b19",
            "id": "igw-0ea06c0adb38f2b19",
            "owner_id": "339712706563",
            "tags": {
              "Name": "two-tier-igw"
            },
            "tags_all": {
              "Name": "two-tier-igw"
            },
            "vpc_id": "vpc-01d2a45839051cf4d"
          },
          "dependencies": [
            "aws_vpc.two-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "two-tier-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:339712706563:loadbalancer/app/two-tier-lb/b4a20fc2f6eb8545",
            "arn_suffix": "app/two-tier-lb/b4a20fc2f6eb8545",
            "desync_mitigation_mode": "defensive",
            "dns_name": "two-tier-lb-508602818.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:339712706563:loadbalancer/app/two-tier-lb/b4a20fc2f6eb8545",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "two-tier-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ff8d1286ce45ec5a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03bcae93eac50e6bf"
              },
              {
                "subnet_id": "subnet-061fce7c11b669bc6"
              }
            ],
            "subnets": [
              "subnet-03bcae93eac50e6bf",
              "subnet-061fce7c11b669bc6"
            ],
            "tags": {
              "Environment": "two-tier-lb"
            },
            "tags_all": {
              "Environment": "two-tier-lb"
            },
            "vpc_id": "vpc-01d2a45839051cf4d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.two-tier-alb-sg",
            "aws_subnet.two-tier-pub-sub-1",
            "aws_subnet.two-tier-pub-sub-2",
            "aws_vpc.two-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "two-tier-lb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:339712706563:listener/app/two-tier-lb/b4a20fc2f6eb8545/55b454811ab7892b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:339712706563:targetgroup/two-tier-lb-tg/c341da10fcb9c012",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:339712706563:listener/app/two-tier-lb/b4a20fc2f6eb8545/55b454811ab7892b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:339712706563:loadbalancer/app/two-tier-lb/b4a20fc2f6eb8545",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.two-tier-lb",
            "aws_lb_target_group.two-tier-lb-tg",
            "aws_security_group.two-tier-alb-sg",
            "aws_subnet.two-tier-pub-sub-1",
            "aws_subnet.two-tier-pub-sub-2",
            "aws_vpc.two-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "two-tier-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:339712706563:targetgroup/two-tier-lb-tg/c341da10fcb9c012",
            "arn_suffix": "targetgroup/two-tier-lb-tg/c341da10fcb9c012",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:339712706563:targetgroup/two-tier-lb-tg/c341da10fcb9c012",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "two-tier-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01d2a45839051cf4d"
          },
          "dependencies": [
            "aws_vpc.two-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "two-tier-loadb_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:339712706563:targetgroup/target/5863e2e7d0ab3f00",
            "arn_suffix": "targetgroup/target/5863e2e7d0ab3f00",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:339712706563:targetgroup/target/5863e2e7d0ab3f00",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01d2a45839051cf4d"
          },
          "dependencies": [
            "aws_vpc.two-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "two-tier-tg-attch-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "two-tier-tg-attch-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "two-tier-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339712706563:route-table/rtb-0969ad931e05b9eaf",
            "id": "rtb-0969ad931e05b9eaf",
            "owner_id": "339712706563",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea06c0adb38f2b19",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "two-tier-rt"
            },
            "tags_all": {
              "Name": "two-tier-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d2a45839051cf4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.two-tier-igw",
            "aws_vpc.two-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "two-tier-rt-as-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099c9625511e9d029",
            "route_table_id": "rtb-0969ad931e05b9eaf",
            "subnet_id": "subnet-061fce7c11b669bc6"
          },
          "dependencies": [
            "aws_internet_gateway.two-tier-igw",
            "aws_route_table.two-tier-rt",
            "aws_subnet.two-tier-pub-sub-1",
            "aws_vpc.two-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "two-tier-rt-as-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fbe4b51d3f44611",
            "route_table_id": "rtb-0969ad931e05b9eaf",
            "subnet_id": "subnet-03bcae93eac50e6bf"
          },
          "dependencies": [
            "aws_internet_gateway.two-tier-igw",
            "aws_route_table.two-tier-rt",
            "aws_subnet.two-tier-pub-sub-2",
            "aws_vpc.two-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "two-tier-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339712706563:security-group/sg-0ff8d1286ce45ec5a",
            "description": "load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff8d1286ce45ec5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "two-tier-alb-sg",
            "name_prefix": "",
            "owner_id": "339712706563",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "two-tier-alb-sg"
            },
            "tags_all": {
              "Name": "two-tier-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d2a45839051cf4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.two-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "two-tier-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339712706563:security-group/sg-08faaecf9486f5b4b",
            "description": "allow traffic from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08faaecf9486f5b4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cfee42084d8451ed"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cfee42084d8451ed"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "two-tier-db-sg",
            "name_prefix": "",
            "owner_id": "339712706563",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01d2a45839051cf4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.two-tier-ec2-sg",
            "aws_vpc.two-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "two-tier-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339712706563:security-group/sg-0cfee42084d8451ed",
            "description": "Allow traffic from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfee42084d8451ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "two-tier-ec2-sg",
            "name_prefix": "",
            "owner_id": "339712706563",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "two-tier-ec2-sg"
            },
            "tags_all": {
              "Name": "two-tier-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d2a45839051cf4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.two-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "two-tier-pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339712706563:subnet/subnet-061fce7c11b669bc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061fce7c11b669bc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712706563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "two-tier-pub-sub-1"
            },
            "tags_all": {
              "Name": "two-tier-pub-sub-1"
            },
            "vpc_id": "vpc-01d2a45839051cf4d"
          },
          "dependencies": [
            "aws_vpc.two-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "two-tier-pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339712706563:subnet/subnet-03bcae93eac50e6bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bcae93eac50e6bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712706563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "two-tier-pub-sub-2"
            },
            "tags_all": {
              "Name": "two-tier-pub-sub-2"
            },
            "vpc_id": "vpc-01d2a45839051cf4d"
          },
          "dependencies": [
            "aws_vpc.two-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "two-tier-pvt-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339712706563:subnet/subnet-03443780ac845c53a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03443780ac845c53a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712706563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "two-tier-pvt-sub-1"
            },
            "tags_all": {
              "Name": "two-tier-pvt-sub-1"
            },
            "vpc_id": "vpc-01d2a45839051cf4d"
          },
          "dependencies": [
            "aws_vpc.two-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "two-tier-pvt-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339712706563:subnet/subnet-04ff7158bf1b16184",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ff7158bf1b16184",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712706563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "two-tier-pvt-sub-2"
            },
            "tags_all": {
              "Name": "two-tier-pvt-sub-2"
            },
            "vpc_id": "vpc-01d2a45839051cf4d"
          },
          "dependencies": [
            "aws_vpc.two-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "two-tier-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:339712706563:vpc/vpc-01d2a45839051cf4d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ac1ec289a4be3dc",
            "default_route_table_id": "rtb-0960f4dd7a6e7bb2b",
            "default_security_group_id": "sg-08a729fe11fdbdeda",
            "dhcp_options_id": "dopt-02631ecb1c190637d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01d2a45839051cf4d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0960f4dd7a6e7bb2b",
            "owner_id": "339712706563",
            "tags": {
              "Name": "two-tier-vpc"
            },
            "tags_all": {
              "Name": "two-tier-vpc"
            }
          }
        }
      ]
    }
  ]
}